--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             </div>
         </form>
         <div class="pagination">
-            <button id="prev-page" class="btn">&#8592;</button>
-            <div id="page-numbers"></div>
-            <button id="next-page" class="btn">&#8594;</button>
+            <button id="prev-page" class="arrow prev">&lt;</button>
+            <div class="page-numbers"></div>
+            <button id="next-page" class="arrow next">&gt;</button>
         </div>
     </aside>
     <div class="container"></div>
